# modkit

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENCE.txt  README.md  advanced_usage.md  advanced_usage.template  ci.Dockerfile  collapse.md  filtering.md  generate_advanced_usage.sh  readme.template  run_helps.sh  rust-toolchain.toml  schema.yaml
.github/workflows/: static.yml
book/: custom.css
book/src/: SUMMARY.md  advanced_usage.md  algo_details.md  collapse.md  dmr_scoring_details.md  evaluate_motif.md  faq.md  filtering.md  filtering_details.md  filtering_numeric_details.md  intro_adjust.md  intro_bedmethyl.md  intro_bedmethyl_merge.md  intro_call_mods.md  intro_dmr.md  intro_edge_filter.md  intro_entropy.md  intro_extract.md  intro_find_motifs.md  intro_include_bed.md  intro_localize.md  intro_modbam_check_tags.md  intro_motif.md  intro_motif_bed.md  intro_pileup_hemi.md  intro_repair.md  intro_sample_probs.md  intro_stats.md  intro_summary.md  intro_validate.md  limitations.md  perf_considerations.md  quick_start.md  troubleshooting.md
docs/: 404.html  advanced_usage.html  algo_details.html  book.toml  collapse.html  dmr_scoring_details.html  evaluate_motif.html  faq.html  filtering.html  filtering_details.html  filtering_numeric_details.html  index.html  intro_adjust.html  intro_bedmethyl.html  intro_bedmethyl_merge.html  intro_call_mods.html  intro_dmr.html  intro_edge_filter.html  intro_entropy.html  intro_extract.html  intro_find_motifs.html  intro_include_bed.html  intro_localize.html  intro_modbam_check_tags.html  intro_motif.html  intro_motif_bed.html  intro_pileup.html  intro_pileup_hemi.html  intro_repair.html  intro_sample_probs.html  intro_stats.html  intro_summary.html  intro_validate.html  limitations.html  perf_considerations.html  print.html  quick_start.html  searchindex.js  searchindex.json  troubleshooting.html
docs/src/: SUMMARY.md  advanced_usage.md  algo_details.md  collapse.md  intro_bedmethyl.md  perf_considerations.md  troubleshooting.md
modkit-book/: book.toml
modkit-book/book/: 404.html  chapter_1.html  collapse.html  filtering.html  print.html  searchindex.js  searchindex.json
modkit-book/src/: SUMMARY.md
src/: adjust.rs  command_utils.rs  commands.rs  errs.rs  extract_mods.rs  fasta.rs  filter_thresholds.rs  genome_positions.rs  hmm.rs  interval_chunks.rs  interval_processor.rs  lib.rs  logging.rs  mod_bam.rs  mod_base_code.rs  mod_pileup.rs  monoid.rs  motif_bed.rs  parsing_utils.rs  position_filter.rs  read_cache.rs  read_ids_to_base_mod_probs.rs  reads_sampler.rs  record_processor.rs  record_sampler.rs  repair_tags.rs  summarize.rs  tabix.rs  threshold_mod_caller.rs  thresholds.rs  util.rs  writers.rs
src/bedmethyl_util/: mod.rs  subcommand.rs  subcommands.rs
src/dmr/: bedmethyl.rs  beta_diff.rs  llr_model.rs  mod.rs  model.rs  multi_sample.rs  pairwise.rs  single_site.rs  subcommand.rs  subcommands.rs  tabix.rs  util.rs
src/entropy/: methylation_entropy.rs  mod.rs  (+2 more)
tests/: add_implicit_col.py  add_mn_tags_to_repair_records.py  check_extracts.sh  check_extracts_flag.sh  make_crams.sh  make_trimmed_reads.sh  regress_tags.sh  test_adjust_mods.rs  test_against_reference_impl.rs  test_bedmethyl_util.rs  test_call_mods.rs  test_dmr.rs  test_entropy.rs  test_extract.rs  test_find_motifs.rs  test_localize.rs  test_modbam_utils.rs  test_pileup.rs  test_pileup_hemi.rs  test_regression_against_known_outputs.rs  test_repair.rs  test_summary.rs  test_update_tags.rs  test_validate.rs  trim_reads.py  update_extract_test_data.sh
(+132 files in other folders)
