[package]
name = "mod_kit"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "modkit"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rust-htslib = "0.43.1"
bio = "1.0.0"
indexmap = "1.9.2"
rustc-hash = "1.1.0"
pulp = "0.10.3"
clap = { version = "4.0.29", features = ["derive", "wrap_help"]}
indicatif = { version = "0.17.1", features = ["rayon"] }
itertools = "0.10.5"
anyhow = "1.0.68"
rayon = "1.6.1" # should get updated to 1.8.0
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
rand = "0.8.5"
log = "0.4.0"
log4rs = { version = "1.2.0", features = ["file_appender", "json_encoder"]}
regex = "1.4"
derive-new = "0.5.9"
histo_fp = "0.2.1"
prettytable-rs = "0.10.0"
rust-lapper = "1.1.0"
linear-map = "1.2.0"
nom = "7.1.3"
noodles = { version = "0.50.0", features = ["tabix", "core", "bgzf", "csi"] }
#bgzip = "0.3.1"
rv = "0.16.0"
ndarray = "0.15.6"
log-once = "0.4.0"
lazy_static = "1.4"
common_macros = "0.1.1"
ansi_term="0.12.1"

[dev-dependencies]
similar-asserts = "1.4.2"

# Used in benchmarking, but the slower code gets removed, usually.
#criterion = "0.5.1"
#rv = "0.15.1"

#[[bench]]
#name = "bench_mm_parse"
#harness = false
