[package]
name = "mod_kit"
version = "0.2.8"
edition = "2021"

[[bin]]
name = "modkit"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.68"
bio = "1.0.0"
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
common_macros = "0.1.1"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
derive-new = "0.6.0"
histo_fp = "0.2.1"
indexmap = "2.2.6"
indicatif = { version = "0.17.1", features = ["rayon"] }
itertools = "0.12.1"
lazy_static = "1.4"
linear-map = "1.2.0"
log = "0.4.0"
log-once = "0.4.0"
log4rs = { version = "1.2.0", features = ["file_appender", "json_encoder"] }
memchr = "2.6.4"
ndarray = "0.15.6"
nom = "7.1.3"
noodles = { version = "0.69.0", features = ["tabix", "core", "bgzf", "csi", "tabix"] }
prettytable-rs = "0.10.0"
pulp = "0.18.10"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.4"
rust-htslib = "0.46.0"
rust-lapper = "1.1.0"
rustc-hash = "1.1.0"
rv = "=0.16.0"
statrs = "0.16.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
similar-asserts = "1.4.2"
tempfile = "3.2"

