[package]
name = "mod_kit"
version = "0.4.4"
edition = "2021"

[[bin]]
name = "modkit"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.68"
bigtools = "0.5.4"
bio = "1.0.0"
bitvec = "1.0.1"
charming = "0.3.1"
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
common_macros = "0.1.1"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
csv = "1.3.0"
derive-new = "0.6.0"
gzp = { version = "0.11.3", default-features = false, features = ["deflate_rust"] }
indexmap = "2.2.6"
indicatif = { version = "0.17.1", features = ["rayon"] }
itertools = "0.12.1"
lazy_static = "1.4"
linear-map = "1.2.0"
log = "0.4.0"
log-once = "0.4.0"
log4rs = { version = "1.2.0", features = ["file_appender", "json_encoder"] }
memchr = "2.6.4"
ndarray = "0.15.6"
nom = "7.1.3"
num = "0.4.3"
num-traits = "0.2.19"
prettytable-rs = "0.10.0"
pulp = "0.18.10"
rand = "0.8.5"
random_color = "1.0.0"
rayon = "1.8.0"
regex = "1.4"
rust-htslib = "0.46.0"
rust-lapper = "1.1.0"
rustc-hash = "1.1.0"
rv = "=0.16.0"
statrs = "0.16.0"
substring = "1.4.5"
tokio = "1.42.0"
thiserror = "2.0.11"


[dev-dependencies]
assert_approx_eq = "1.1.0"
similar-asserts = "1.4.2"
tempfile = "3.2"

